--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
@@ -260,7 +260,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div style="margin-top: 1em;overflow:auto">
+                <div style="margin-top: 1em;Ovenflow:auto">
                     <table cellspacing="100" class="DataTable DetailTable table table-striped display;" style="width: 200vw">
                         <thead>
                             <tr class="row-name" id="row-name">
@@ -274,12 +274,12 @@
                                 <th style="width:5vw">Size</th>
                                 <th style="width:5vw">Arrive Qty</th>
                                 <th style="width:5vw">Insp. Deadline</th>
-                                <th style="width:5vw">Over All Result</th>
-                                <th style="width:5vw">Over N/A</th>
-                                <th style="width:5vw">Over Result</th>
-                                <th style="width:5vw">Over Scale</th>
-                                <th style="width:5vw">Over Last Test Date</th>
-                                <th style="width:5vw">Over Lab Tech</th>
+                                <th style="width:5vw">Oven All Result</th>
+                                <th style="width:5vw">Oven N/A</th>
+                                <th style="width:5vw">Oven Result</th>
+                                <th style="width:5vw">Oven Scale</th>
+                                <th style="width:5vw">Oven Last Test Date</th>
+                                <th style="width:5vw">Oven Lab Tech</th>
                                 <th style="width:5vw">Remark</th>
                                 <th style="width:5vw">Wash N/A</th>
                                 <th style="width:5vw">Wash Result</th>
