--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
@@ -209,14 +209,7 @@
                                         </td>
                                         <td><h5>Result</h5></td>
                                         <td>
-                                            @*<select id="Result" name="Result" disabled="disabled" style="width:157px;">
-                                                                                       @foreach (var item in Model.ResultData)
-                                                    {
-                                                        string selected = item.Text.Equals(Model.OvenResult) ? "selected" : "";
-                                                        <option value="@item.Value" @selected>@item.Text</option>
-                                                    }
-                                                </select>*@
-                                            @Html.DropDownListFor(o => o.OvenResult, Model.ResultData)
+                                            @Html.DropDownListFor(o => o.OvenResult, Model.ResultData,new { @onchange="ResultChange()"})
                                         </td>
                                         <td></td>
                                         <td></td>
@@ -271,6 +264,7 @@
 
             EditMode = false;
             IsEditModeChange();
+            ResultChange();
         });
 
         function IsEditModeChange() {
@@ -334,22 +328,6 @@
                 document.getElementById("DetailForm").submit();
             });
 
-            $('#Encode').on('click', function (e) {
-                var OvenResult = $("#OvenResult").val();
-
-                if (OvenResult != '') {
-
-                    if (OvenResult == "Fail" && $("#needSendMail").val() == 'true') {
-                        FailMail();
-                        return false;
-                    }
-                }
-                else {
-                    msg.WithError("Result cannot be empty.");
-                    return false;
-                }
-            });
-
             $('#Amend').on('click', function (e) {
                 document.getElementById("DetailForm").submit();
             });
@@ -364,10 +342,20 @@
 
                 window.open('@Url.Action("PictureList","PublicWondow",new{Area=""})' + para, 'Picture', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
             });
+    }
+
+    function ResultChange() {
+
+        if ($("#OvenResult").val() == 'Pass') {
+            $("#OvenResult").css("color", "Blue");
         }
+        else {
+            $("#OvenResult").css("color", "red");
+        }
+    }
 
     function FailMail() {
-        var para = "?Title=OvenTest&FactoryID=@ViewBag.FactoryID&Type=BulkFGT";
+        var para = "?Title=OvenTest&FactoryID=@ViewBag.FactoryID&Type=BulkFGT&ExitReload=False";
 
         window.open('@Url.Action("TestFailMailList", "PublicWondow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
     }
@@ -380,15 +368,36 @@
             cc += value.CC + ';';
         });
 
-        if (to != "") {
-            $("#ToAddress").val(to);
-            $("#CcAddress").val(cc);
-            $("#needSendMail").val(false);
-            $("#Encode").click();
-        }
-        else {
-            msg.WithError("Please choose the mail group.");
-            e.preventDefault();
+        if (to != "") {            
+            var data = {
+                AIR_LaboratoryID: $("#AIR_LaboratoryID").val(),
+                POID: $("#POID").val(),
+                Seq1: $("#Seq1").val(),
+                Seq2: $("#Seq2").val(),
+                ToAddress: to,
+                CcAddress: cc,
+            };
+
+            $.ajax({
+                url: "@Url.Action("OvenFailMail")",
+                type: 'POST',
+                dataType: "json",
+                data: { Req: data},
+                async: false,
+                success: function (data) {
+                    if (data.result) {
+                        msg.WithSuccess("Success");
+                    }
+                    else {
+                        msg.WithWarning(data.resultMsg);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    msg.WithWarningCheck(xhr.responseText, function () {
+                        location.reload();
+                    });
+                }
+            });
         }
     }
 
