--- a/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
@@ -1420,7 +1420,7 @@
             async: false,
             success: function (data) {
                 if (data.result) {
-                    msg.WithSucces("Success");
+                    msg.WithSuccess("Success");
                 }
                 else {
                     msg.WithWarning(data.resultMsg);
