--- a/Quality/Quality/Views/PublicWondow/PictureList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/PictureList.cshtml
@@ -6,6 +6,9 @@
     string EditMode = ViewData["EditMode"] == null ? "EditMode" : ViewData["EditMode"].ToString();
 
     string TargetID = ViewData["TargetID"] == null ? string.Empty : ViewData["TargetID"].ToString();
+
+    string BeforeColumn = ViewData["BeforeColumn"] == null ? string.Empty : ViewData["BeforeColumn"].ToString();
+    string AfterColumn = ViewData["AfterColumn"] == null ? string.Empty : ViewData["AfterColumn"].ToString();
 }
 
 @model Window_Picture
@@ -118,15 +121,15 @@
     $(function () {
 
         // 找出父頁面的照片
-        const CurrentBefore = window.opener.document.querySelector("#TestBeforePicture");
-        const CurrentAfter = window.opener.document.querySelector("#TestAfterPicture");
+        const CurrentBefore = window.opener.document.querySelector("#@BeforeColumn");
+        const CurrentAfter = window.opener.document.querySelector("#@AfterColumn");
 
         //如果父頁面有照片，則顯示父頁面照片，如果沒有則顯示DB的照片
-        if (CurrentBefore.value != '') {
+        if (CurrentBefore != null && CurrentBefore.value != '') {
             var before = document.querySelector("#BeforePic");
             before.src = 'data:image/webp;base64,' + CurrentBefore.value;
         }
-        if (CurrentAfter.value != '') {
+        if (CurrentAfter != null && CurrentAfter.value != '') {
             var after = document.querySelector("#AfterPic");
             after.src = 'data:image/webp;base64,' + CurrentAfter.value;
         }
