--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -1000,7 +1000,7 @@
             url: "@Url.Action("FailMail", "PullingTest", new { Area = "BulkFGT" })",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ ReportNo: $('#ReportNoText').val(), PullForceUnit: $("#Detail_PullForceUnit").val() , TO: to, CC: cc }),
+            data: JSON.stringify({ ReportNo: $('#ReportNoText').val() , TO: to, CC: cc }),
             async: false,
             success: function (data) {
                 if (data.result) {
