--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -482,7 +482,7 @@
 
             $('#Picture').on('click', function () {
                 if ($('#Detail_ReportNo').val() != null && $('#Detail_ReportNo').val() != "") {
-                    var para = "?EditMode=" + EditMode + "&Title=PullingTest&Table=ManufacturingExecution.dbo.PullingTest&BeforeColumn=TestBeforePicture&AfterColumn=TestAfterPicture&PKey_1=ReportNo&PKey_1_Val=" + $('#Detail_ReportNo').val();
+                    var para = "?EditMode=" + EditMode + "&Title=PullingTest&TargetBeforeColumn=Detail_TestBeforePicture&TargetAfterColumn=Detail_TestAfterPicture&Table=ManufacturingExecution.dbo.PullingTest&BeforeColumn=TestBeforePicture&AfterColumn=TestAfterPicture&PKey_1=ReportNo&PKey_1_Val=" + $('#Detail_ReportNo').val();
                     window.open('@Url.Action("PictureList","PublicWondow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
                 }
             });
