--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/Index.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/Index.cshtml
@@ -50,7 +50,8 @@
 
 
     #btnBarcode {
-        background-image: url('/Quality/Image/Icon/Barcode.png');
+        /*background-image: url('/Quality/Image/Icon/Barcode.png');*/
+        background-image: url('../../../../Image/Icon/Barcode.png');
         background-size: 100% auto;
         background-color: white;
     }
